--- a/src/styles/abstracts/main.css
+++ b/src/styles/abstracts/main.css
@@ -34,6 +34,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
   line-height: 1;
+  overflow-x: hidden;
 }
 
 ol, ul {
@@ -62,7 +63,7 @@ a {
 
 header {
   width: 100vw;
-  height: 40px;
+  height: 5vh;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   font-family: "TheJamsil5Bold";
   font-weight: 700;
@@ -71,9 +72,8 @@ header {
 
 .headerWrapper {
   position: relative;
-  width: 95vw;
+  width: 100vw;
   height: 100%;
-  padding: 0 2.5vw;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -99,6 +99,9 @@ header {
   gap: 5vw;
 }
 
+.headerNav {
+  color: rgba(0, 0, 0, 0.5);
+}
 .headerNav span {
   display: inline-block;
   width: 15px;
@@ -106,13 +109,60 @@ header {
   transform: scale(1);
   transform-origin: bottom;
   transition: 0.25s;
+  color: rgba(0, 0, 0, 0.5) ease-in-out;
+}
+.headerNav a {
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .headerNav:hover span {
   transform: scale(1.4);
+  color: rgb(0, 0, 0);
+}
+.headerNav:hover a {
+  color: rgb(0, 0, 0);
 }
 
 .index-section-03, .index-section-02, .index-section-01 {
   width: 100vw;
   height: 100vh;
+}
+
+.index-section-01 {
+  height: 95vh;
+  position: relative;
+}
+
+.index-section01-videoWrapper {
+  width: 100%;
+  height: 100%;
+}
+
+.index-section01-video {
+  width: 100%;
+  height: 100%;
+}
+.index-section01-video video {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.index-section01-Control {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.index-section01-playBtn {
+  position: absolute;
+  left: 50%;
+  bottom: 100px;
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  background-color: blue;
 }/*# sourceMappingURL=main.css.map */
