--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -2,7 +2,7 @@
 
 header {
   width: 100vw;
-  height: 40px;
+  height: variables.$header-height;
   border-bottom: 1px solid variables.$bd-01;  
   @include variables.jamsil(700);
   text-transform: uppercase;
@@ -10,9 +10,8 @@ header {
 
 .headerWrapper {
   position: relative;
-  width: 95vw;
+  width: 100vw;
   height: 100%;
-  padding: 0 2.5vw;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -39,6 +38,7 @@ header {
 
 }
 .headerNav {
+  color: variables.$bua;
   span {
     display: inline-block;
     width: 15px;
@@ -46,11 +46,22 @@ header {
     transform: scale(1);
     transform-origin: bottom;
     transition: 0.25s;
+
+    color: variables.$bua ease-in-out;
+  }
+
+  a {
+    color: variables.$bua;
   }
 }
 .headerNav:hover {
 
   span {
     transform: scale(1.4);
+    color: variables.$ba;
+  }
+  
+  a {
+    color: variables.$ba;
   }
 }
