--- a/src/styles/abstracts/main.css
+++ b/src/styles/abstracts/main.css
@@ -1,7 +1,38 @@
+@charset "UTF-8";
 @font-face {
-  font-family: "TheJamsil5Bold";
-  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2302_01@1.0/TheJamsil5Bold.woff2") format("woff2");
+  font-family: "jsExtraBold";
+  src: url("../../assets/fonts/Jamsil/The_Jamsil_OTF_ExtraBold.otf") format("opentype"); /* otf 파일 경로 */
+  font-weight: 800;
+  font-style: normal;
+}
+@font-face {
+  font-family: "jsBold";
+  src: url("../../assets/fonts/Jamsil/The_Jamsil_OTF_Bold.otf") format("opentype"); /* otf 파일 경로 */
   font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "jsMedium";
+  src: url("../../assets/fonts/Jamsil/The_Jamsil_OTF_Medium.otf") format("opentype"); /* otf 파일 경로 */
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "jsRegular";
+  src: url("../../assets/fonts/Jamsil/The_Jamsil_OTF_Regular.otf") format("opentype"); /* otf 파일 경로 */
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "jsLight";
+  src: url("../../assets/fonts/Jamsil/The_Jamsil_OTF_Light.otf") format("opentype"); /* otf 파일 경로 */
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "jsThin";
+  src: url("../../assets/fonts/Jamsil/The_Jamsil_OTF_Thin.otf") format("opentype"); /* otf 파일 경로 */
+  font-weight: 100;
   font-style: normal;
 }
 html, body, div, span, applet, object, iframe,
@@ -65,8 +96,7 @@ header {
   width: 100vw;
   height: 5vh;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  font-family: "TheJamsil5Bold";
-  font-weight: 700;
+  font-family: "jsBold";
   text-transform: uppercase;
 }
 
@@ -128,7 +158,37 @@ header {
   height: 100vh;
 }
 
+@keyframes borderColor {
+  0% {
+    border-color: rgba(255, 255, 255, 0.4);
+  }
+  50% {
+    border-color: rgb(255, 255, 255);
+  }
+  100% {
+    border-color: rgba(255, 255, 255, 0.4);
+  }
+}
+@keyframes scrollBall {
+  0% {
+    opacity: 0%;
+    top: 62%;
+  }
+  30% {
+    opacity: 100%;
+    top: 62%;
+  }
+  70% {
+    opacity: 100%;
+    top: 6%;
+  }
+  100% {
+    opacity: 0%;
+    top: 6%;
+  }
+}
 .index-section-01 {
+  display: none;
   height: 95vh;
   position: relative;
 }
@@ -159,10 +219,218 @@ header {
 
 .index-section01-playBtn {
   position: absolute;
+  display: none;
   left: 50%;
   bottom: 100px;
   width: 100px;
   height: 100px;
   border-radius: 100%;
   background-color: blue;
+}
+
+.index-section01--textWrapper {
+  color: white;
+  position: absolute;
+  bottom: 22vh;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.index-section01--textWrapper .index-section01--welcome,
+.index-section01--textWrapper .index-section01--title {
+  position: relative;
+}
+.index-section01--textWrapper .index-section01--welcome p,
+.index-section01--textWrapper .index-section01--title h3 {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.index-section01--textWrapper .index-section01--welcome p {
+  font-family: "jsRegular";
+  font-size: 18px;
+  letter-spacing: 3px;
+  line-height: 35px;
+}
+.index-section01--textWrapper .index-section01--title h3 {
+  font-family: "jsMedium";
+  font-size: 32px;
+}
+
+.index-section01--videoControlsWrapper {
+  position: absolute;
+  color: white;
+  left: 0;
+  bottom: 5vh;
+  left: 2.5vw;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+.index-section01--videoControlsWrapper .index-section01--openBtnWrp {
+  position: relative;
+  width: 25px;
+  height: 25px;
+  margin-right: 15px;
+  transform: scale(1);
+  transition: transform 0.35s;
+  cursor: pointer;
+}
+.index-section01--videoControlsWrapper .index-section01--openBtnWrp div {
+  position: absolute;
+}
+.index-section01--videoControlsWrapper .index-section01--openBtnWrp .index-section01-openBtn:nth-child(1) {
+  width: 9px;
+  height: 9px;
+  top: 0;
+  left: 0;
+  border-top: 2px solid rgba(255, 255, 255, 0.4);
+  border-left: 2px solid rgba(255, 255, 255, 0.4);
+}
+.index-section01--videoControlsWrapper .index-section01--openBtnWrp .index-section01-openBtn:nth-child(2) {
+  width: 9px;
+  height: 9px;
+  top: 0;
+  right: 0;
+  border-top: 2px solid rgba(255, 255, 255, 0.4);
+  border-right: 2px solid rgba(255, 255, 255, 0.4);
+}
+.index-section01--videoControlsWrapper .index-section01--openBtnWrp .index-section01-openBtn:nth-child(3) {
+  width: 9px;
+  height: 9px;
+  bottom: 0;
+  right: 0;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.4);
+  border-right: 2px solid rgba(255, 255, 255, 0.4);
+}
+.index-section01--videoControlsWrapper .index-section01--openBtnWrp .index-section01-openBtn:nth-child(4) {
+  width: 9px;
+  height: 9px;
+  bottom: 0;
+  left: 0;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.4);
+  border-left: 2px solid rgba(255, 255, 255, 0.4);
+}
+.index-section01--videoControlsWrapper .index-section01--openBtnWrp:hover {
+  transform: scale(1.1);
+}
+.index-section01--videoControlsWrapper .index-section01--openBtnWrp:hover .index-section01-openBtn:nth-child(1) {
+  animation: borderColor 1.5s ease-in-out 0s infinite;
+  animation-delay: 0s, 3s;
+}
+.index-section01--videoControlsWrapper .index-section01--openBtnWrp:hover .index-section01-openBtn:nth-child(2) {
+  animation: borderColor 1.5s ease-in-out 0.25s infinite;
+  animation-delay: 0.25s, 3.25s;
+}
+.index-section01--videoControlsWrapper .index-section01--openBtnWrp:hover .index-section01-openBtn:nth-child(3) {
+  animation: borderColor 1.5s ease-in-out 0.4s infinite;
+  animation-delay: 0.4s, 3.4s;
+}
+.index-section01--videoControlsWrapper .index-section01--openBtnWrp:hover .index-section01-openBtn:nth-child(4) {
+  animation: borderColor 1.5s ease-in-out 0.5s infinite;
+  animation-delay: 0.5s, 3.5s;
+}
+.index-section01--videoControlsWrapper .index-section01--creator {
+  text-transform: uppercase;
+  font-size: 17px;
+  letter-spacing: 1px;
+  font-family: "jsLight";
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.index-section01--howToUse {
+  position: absolute;
+  bottom: 5vh;
+  width: 36px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.index-section01--howToUse .index-section01-scrollIcon {
+  position: absolute;
+  width: 30px;
+  height: 62px;
+  border-radius: 18px 18px 18px 18px;
+  transform: translateY(-100%);
+  border: 2px solid rgb(255, 255, 255);
+}
+.index-section01--howToUse .index-section01-scrollIcon::after {
+  content: "";
+  position: relative;
+  display: block;
+  width: 20px;
+  height: 19px;
+  border-radius: 100%;
+  background-color: white;
+  left: 50%;
+  transform: translateX(-50%);
+  animation: scrollBall 1.7s ease-in-out 0.7s infinite;
+}
+
+.index-section-02 {
+  position: relative;
+}
+
+.index-section02--wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.index-section02--title {
+  width: 100%;
+  position: relative;
+}
+.index-section02--title h2 {
+  font-family: "jsBold";
+  text-transform: uppercase;
+  margin: 70px 0;
+  font-size: 25px;
+  letter-spacing: 1.5px;
+  word-spacing: 15px;
+  position: relative;
+  display: inline-block;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.index-section02--textWrappers {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  gap: 120px;
+}
+.index-section02--textWrappers .index-section02--textWrapper {
+  width: 220px;
+}
+.index-section02--textWrappers .index-section02--textWrapper .index-section02--subTitle {
+  font-family: "jsMedium";
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 14px;
+  letter-spacing: 1.2px;
+  margin-bottom: 15px;
+}
+.index-section02--textWrappers .index-section02--textWrapper .index-section02--content {
+  font-family: "jsRegular";
+  font-size: 18px;
+  letter-spacing: 1.2px;
+  line-height: 21px;
+}
+
+.index-section02--imagesWrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.index-section02--imagesWrapper .index-section02--image {
+  position: absolute;
+  width: 260px;
+  height: 180px;
+  border: 1px solid #000;
+}
+.index-section02--imagesWrapper .index-section02--image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }/*# sourceMappingURL=main.css.map */
