--- a/src/styles/layout/_Index.scss
+++ b/src/styles/layout/_Index.scss
@@ -1,11 +1,63 @@
 @use '../abstracts/variables';
+@use "sass:math";
+
+
+
 
 %index-section {
   width: 100vw;
   height: 100vh;
 }
+@mixin border($po1,$po2){
+  width: 9px;
+  height: 9px;
+  #{$po1} : 0;
+  #{$po2} : 0;
+  border-#{$po1}: 2px solid rgba(255,255,255,0.4);
+  border-#{$po2}: 2px solid rgba(255,255,255,0.4);
+}
+
+@keyframes borderColor {
+    0% {
+      border-color:  rgba(255,255,255,.4);
+    }
+    50% {
+      border-color:  rgba(255,255,255,1);
+
+    }
+    100% {
+      border-color:  rgba(255,255,255,.4);
+    } 
+}
+
+@keyframes scrollBall {
+    0% {
+      opacity: 0%;
+      top:62%
+    }
+    30% {
+      opacity: 100%;
+      top:62%
+    }
+    70%{
+      opacity: 100%;
+      top:6%
+    }
+    100% {
+      opacity: 0%;
+      top:6%
+    } 
+}
+
+@mixin borderHover ($i){
+  animation: borderColor 1.5s ease-in-out #{$i} infinite;
+  animation-delay: #{$i}, #{3s + $i};
+}
+
 
 .index-section-01{
+  display: none;
+
   @extend %index-section;
   height: 100vh - variables.$header-height;
   position: relative;
@@ -36,6 +88,7 @@
 
 .index-section01-playBtn {
   position: absolute;
+  display: none;
   left: 50%;
   bottom: 100px;
   width: 100px;
@@ -44,12 +97,199 @@
   background-color: blue;
 }
 
-.index-section-02{
-  @extend %index-section;
+.index-section01--textWrapper {
+  color: white;
+  position: absolute;
+  bottom: 22vh;
+  @include variables.centerX();
 
+  .index-section01--welcome,
+  .index-section01--title {
+    position: relative;
+  }
+
+  .index-section01--welcome p,
+  .index-section01--title h3{
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+  }
+  .index-section01--welcome p{
+    @include variables.jamsil(400);
+    font-size: 18px;
+    letter-spacing: 3px;
+    line-height: 35px;
+  }
+  .index-section01--title h3{
+    @include variables.jamsil(500);
+    font-size: 32px;
+  }
+  
+}
+.index-section01--videoControlsWrapper {
+  position: absolute;
+  color:white;
+  left: 0;
+  bottom: 5vh;
+  left: 2.5vw;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+
+
+  .index-section01--openBtnWrp {
+    position: relative;
+    width: 25px;
+    height: 25px;
+    margin-right: 15px;
+    transform: scale(1);
+    transition: transform .35s;
+    cursor: pointer;
+    div {
+      position: absolute;
+    }
+    .index-section01-openBtn:nth-child(1){
+      @include border(top,left);
+    }
+    .index-section01-openBtn:nth-child(2){
+      @include border(top,right);
+    }
+    .index-section01-openBtn:nth-child(3){
+      @include border(bottom,right);
+    }
+    .index-section01-openBtn:nth-child(4){
+      @include border(bottom,left);
+    }
+  }
+
+  .index-section01--openBtnWrp:hover {
+    transform: scale(1.1);
+    .index-section01-openBtn:nth-child(1){
+      @include borderHover(0s)
+    }
+    .index-section01-openBtn:nth-child(2){
+      @include borderHover(0.25s)
+    }
+    .index-section01-openBtn:nth-child(3){
+      @include borderHover(0.4s)
+    }
+    .index-section01-openBtn:nth-child(4){
+      @include borderHover(0.5s)
+    }
+  }
+
+  .index-section01--creator {
+    text-transform: uppercase;
+    font-size: 17px;
+    letter-spacing: 1px;
+    @include variables.jamsil(300);
+    color: rgba(255,255,255,0.4)
+  }
+}
+
+.index-section01--howToUse {
+  position: absolute;
+  bottom: 5vh;
+  width: 36px;
+  // background-color: blue;
+  @include variables.centerX();
+
+  .index-section01-scrollIcon {
+    position: absolute;
+    width: 30px;
+    height: 62px;
+    border-radius: 18px 18px 18px 18px;
+    transform: translateY(-100%);
+    border: 2px solid rgba(255,255,255,1);
+    // border-right: 2px solid rgba(255,255,255,1);
+    // border-left : 2px solid rgba(255,255,255,1);
+
+    &::after{
+      content: '';
+      position: relative;
+      display: block;
+      width: 20px;
+      height: 19px;
+      border-radius: 100%;
+      background-color: white;
+      @include variables.centerX();
+      animation: scrollBall 1.7s ease-in-out .7s infinite;
+    }
+  }
 }
 
 
+
+.index-section-02{
+  @extend %index-section;
+  position: relative;
+}
+
+.index-section02--wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+
+}
+
+.index-section02--title {
+  width: 100%;
+  position: relative;
+  h2 {
+    @include variables.jamsil(700);
+    text-transform: uppercase;
+    margin: 70px 0;
+    font-size: 25px;
+    letter-spacing: 1.5px;
+    word-spacing: 15px; 
+    position: relative;
+    display: inline-block;
+    @include variables.centerX();
+  }
+}
+
+.index-section02--textWrappers{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  gap: 120px;
+  .index-section02--textWrapper {
+    width: 220px;
+    .index-section02--subTitle{
+      @include variables.jamsil(500);
+      color: rgba(0,0,0,.5);
+      font-size: 14px;
+      letter-spacing: 1.2px;
+      margin-bottom: 15px;
+    }
+
+    .index-section02--content{
+      @include variables.jamsil(400);
+      font-size: 18px;
+      letter-spacing: 1.2px;
+      line-height: 21px;
+    }
+  }
+}
+.index-section02--imagesWrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  .index-section02--image{
+    position: absolute;
+    width: 260px;
+    height: 180px;
+    border: 1px solid #000;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover
+    }
+  }
+}
 
 .index-section-03{
   @extend %index-section;
