--- a/src/styles/abstracts/main.css
+++ b/src/styles/abstracts/main.css
@@ -153,6 +153,13 @@ header {
   color: rgb(0, 0, 0);
 }
 
+.index-section03--wrapper .index-section03--reasonFirst {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+}
+
 .index-section-03, .index-section-02, .index-section-01 {
   width: 100vw;
   height: 100vh;
@@ -367,6 +374,7 @@ header {
 
 .index-section-02 {
   position: relative;
+  display: none;
 }
 
 .index-section02--wrapper {
@@ -397,22 +405,95 @@ header {
   width: 100%;
   justify-content: center;
   gap: 120px;
+  align-items: flex-start;
 }
 .index-section02--textWrappers .index-section02--textWrapper {
   width: 220px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+  padding: 20px 15px;
+  cursor: pointer;
 }
 .index-section02--textWrappers .index-section02--textWrapper .index-section02--subTitle {
   font-family: "jsMedium";
   color: rgba(0, 0, 0, 0.5);
-  font-size: 14px;
+  font-size: 13px;
   letter-spacing: 1.2px;
+  line-height: 22px;
   margin-bottom: 15px;
 }
+.index-section02--textWrappers .index-section02--textWrapper .index-section02--subWrapper {
+  width: 100%;
+  height: 0px;
+  overflow: hidden;
+}
 .index-section02--textWrappers .index-section02--textWrapper .index-section02--content {
+  width: 100%;
   font-family: "jsRegular";
-  font-size: 18px;
-  letter-spacing: 1.2px;
+  font-family: "jsRegular";
+  font-size: 17px;
+  letter-spacing: 1px;
   line-height: 21px;
+  word-spacing: 3px;
+}
+.index-section02--textWrappers .index-section02--textWrapper .index-section02--showIconWrapper {
+  position: relative;
+  width: 100%;
+  height: 30px;
+}
+.index-section02--textWrappers .index-section02--textWrapper .index-section02--showText {
+  position: absolute;
+  bottom: 0;
+  left: 0%;
+  width: 100%;
+  height: 40px;
+  font-size: 18px;
+  overflow: hidden;
+}
+.index-section02--textWrappers .index-section02--textWrapper .index-section02--showText p {
+  position: absolute;
+  opacity: 0;
+  bottom: 0;
+  transform: translateX(-100%);
+  font-family: "jsRegular";
+  transition: 0.35s ease;
+}
+.index-section02--textWrappers .index-section02--textWrapper .index-section02--icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  transition: 0.25s ease;
+  overflow: hidden;
+}
+.index-section02--textWrappers .index-section02--textWrapper .index-section02--icon .index-section02--arrowIcon {
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 20px;
+  transition: 0.25s ease;
+}
+.index-section02--textWrappers .index-section02--textWrapper .index-section02--icon .arrowOne {
+  transform: translate(-50%, -50%);
+}
+.index-section02--textWrappers .index-section02--textWrapper .index-section02--icon .arrowTwo {
+  transform: translate(-150%, 150%);
+}
+.index-section02--textWrappers .index-section02--textWrapper:hover .index-section02--subTitle {
+  color: #000;
+}
+.index-section02--textWrappers .index-section02--textWrapper:hover .index-section02--showText p {
+  transform: translateX(0%);
+  opacity: 1;
+}
+.index-section02--textWrappers .index-section02--textWrapper:hover .arrowOne {
+  transform: translate(150%, -150%);
+}
+.index-section02--textWrappers .index-section02--textWrapper:hover .arrowTwo {
+  transform: translate(-50%, -50%);
 }
 
 .index-section02--imagesWrapper {
@@ -421,16 +502,72 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 .index-section02--imagesWrapper .index-section02--image {
   position: absolute;
   width: 260px;
   height: 180px;
   border: 1px solid #000;
+  background-color: rgba(0, 0, 255, 0.5);
 }
 .index-section02--imagesWrapper .index-section02--image img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.index-section03--wrapper {
+  width: 100%;
+  height: 100%;
+  padding: 0 10%;
+  position: relative;
+}
+.index-section03--reasonFirst {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.index-section03--reasonFirst .index-section03--whatIsAnimation {
+  width: 350px;
+  position: relative;
+}
+.index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-black,
+.index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-gray {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-black p,
+.index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-gray p {
+  font-family: "jsRegular";
+  font-size: 20px;
+  word-spacing: 6px;
+  line-height: 29px;
+}
+.index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-black p {
+  color: #000;
+}
+.index-section03--reasonFirst .index-section03--whatIsAnimation .index-section03--whatIsAnimation-gray p {
+  color: #6c6c6c;
+}
+.index-section03--reasonFirst .index-section03--experienceAni {
+  width: 750px;
+  height: 500px;
+  background-color: blue;
+  opacity: 0.5;
+}
+
+.index-section03--reasonSecond {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%;
+}
+.index-section03--reasonSecond .index-section03--titleWrapper .index-section03--titles p {
+  font-size: 140px;
+  font-family: "jsExtraBold";
 }/*# sourceMappingURL=main.css.map */
