--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,11 +1,14 @@
 @use '../abstracts/variables';
 
-header {
+header {    
+  position: fixed;
+  top: 0;
   width: 100vw;
   height: variables.$header-height;
   border-bottom: 1px solid variables.$bd-01;  
   @include variables.jamsil(700);
   text-transform: uppercase;
+  z-index: 1000;
 }
 
 .headerWrapper {
