--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -63,7 +63,7 @@ footer {
 }
 
 .footer-info--first {
-  margin-right: 50px;
+  margin-right: 80px;
 }
 .footer-info--phone {
   margin-bottom: 8px;
@@ -106,7 +106,6 @@ footer {
   }
 }
 .footer-info-secondeDown {
-  position: absolute;
-  bottom: 0;
+  margin-top: 40px;
   font-size: 20px;
 }
