--- a/src/styles/abstracts/main.css
+++ b/src/styles/abstracts/main.css
@@ -149,7 +149,7 @@ footer {
 }
 
 .footer-info--first {
-  margin-right: 50px;
+  margin-right: 80px;
 }
 
 .footer-info--phone {
@@ -175,8 +175,7 @@ footer {
 }
 
 .footer-info-secondeDown {
-  position: absolute;
-  bottom: 0;
+  margin-top: 40px;
   font-size: 20px;
 }
 
@@ -675,4 +674,45 @@ header {
   font-size: 15px;
   word-spacing: 6px;
   line-height: 26px;
+}
+
+.tricksList {
+  padding-top: 6vh;
+}
+
+.tricksWrapper {
+  width: 100%;
+  padding: 0 2.5vw;
+}
+
+.tricksGrid {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  -moz-column-gap: 2px;
+       column-gap: 2px;
+  row-gap: 10px;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.tricks-list--entrance {
+  grid-column: span 2;
+  width: 100%;
+  height: 100%;
+}
+
+.trickWrapper {
+  display: inline-grid;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.trick {
+  width: 98%;
+  height: 98%;
+  border: 1px dashed #000;
+  border-radius: 2px;
 }/*# sourceMappingURL=main.css.map */
