--- a/src/styles/layout/_Index.scss
+++ b/src/styles/layout/_Index.scss
@@ -2,7 +2,6 @@
 @use "sass:math";
 
 
-
 %index-FJcSbR{
   display: flex;
   justify-content: space-between;
@@ -62,13 +61,15 @@
 
 .index-section-01{
   @extend %index-section;
-  height: 100vh - variables.$header-height;
+  height: 100vh;
   position: relative;
 }
 
 .index-section01-videoWrapper {
   width: 100%;
   height: 100%;
+  position: absolute;
+  z-index: 0;
 }
 
 .index-section01-video {
@@ -87,6 +88,15 @@
   height: 100%;
   top: 0;
   left: 0;
+  opacity: 1;
+  transition: .5s;
+  z-index: 2;
+  &.hide {
+    top:10%;
+    opacity: 0;
+    z-index: -10;
+  }
+
 }
 
 .index-section01-playBtn {
@@ -127,7 +137,11 @@
   }
   
 }
-.index-section01--videoControlsWrapper {
+
+
+
+
+.index-section01--videoControls--OpenWrapper {
   position: absolute;
   color:white;
   left: 0;
@@ -149,32 +163,46 @@
     div {
       position: absolute;
     }
-    .index-section01-openBtn:nth-child(1){
+    .index-section01--openBtnContainer {
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      .index-section01--openBtn {
+        width: 100%;
+        height: 100%;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+      }
+    }
+
+    .index-section01--openBtnSide:nth-child(2){
       @include border(top,left);
     }
-    .index-section01-openBtn:nth-child(2){
+    .index-section01--openBtnSide:nth-child(3){
       @include border(top,right);
     }
-    .index-section01-openBtn:nth-child(3){
+    .index-section01--openBtnSide:nth-child(4){
       @include border(bottom,right);
     }
-    .index-section01-openBtn:nth-child(4){
+    .index-section01--openBtnSide:nth-child(5){
       @include border(bottom,left);
     }
   }
 
   .index-section01--openBtnWrp:hover {
     transform: scale(1.1);
-    .index-section01-openBtn:nth-child(1){
+    .index-section01--openBtnSide:nth-child(2){
       @include borderHover(0s)
     }
-    .index-section01-openBtn:nth-child(2){
+    .index-section01--openBtnSide:nth-child(3){
       @include borderHover(0.25s)
     }
-    .index-section01-openBtn:nth-child(3){
+    .index-section01--openBtnSide:nth-child(4){
       @include borderHover(0.4s)
     }
-    .index-section01-openBtn:nth-child(4){
+    .index-section01--openBtnSide:nth-child(5){
       @include borderHover(0.5s)
     }
   }
@@ -218,8 +246,113 @@
   }
 }
 
+.index-section01--videoControlsWrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  transition: .5s;
+  z-index: 2;
+  &.hide {
+    top:10%;
+    opacity: 0;
+    z-index: 0;
+  }
+  .index-section01--detailControls {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 20%;
+  }
+  .index-section01--controls--videoRangeWrapper {
+    width: 100%;
+    padding: 4% 2.5vw;
+    height: 10px;
+    position: relative;
+    top: 0;
+
+    .index-section01--controls--rangeLow {
+      position: relative;
+      width: 100%;
+      height: 23px;
+      border-radius: 1px;
+
+      .index-section01--controls--range{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        border-top: 1px solid rgba(255,255,255,0.4);
+      }
+      .index-section01--controls--rangePass{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 0%;
+        border-top: 1px solid white;
+      }
+      .index-section01--controls--rangeControl {
+        position: absolute;
+        width: 23px;
+        height: 23px;
+        border-radius: 100%;
+        background-color: wheat;
+        top: -50%;
+        left: 20%;
+        transition: .2s;
+        z-index: 999;
+        &:hover{
+          background-color: gray;
+        }
+      }
+    }
+  }
+
+}
 
 
+.index-section01--controls--closeBtn {
+  position: relative;
+
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: gray;
+  display: flex;
+  overflow: hidden;
+  align-items: center;
+  
+  top: 50%;
+  left: 50%;
+  button {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    background-color: transparent;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+    pointer-events: all;
+    @include variables.flexjc(center);
+    align-items: center;
+    span{
+      @include variables.jamsil(100, 22px);
+      margin-top: -2px;
+    }
+  }
+
+  &.hide{
+    pointer-events: none;
+    width: 10px;
+    height: 10px;
+    button {
+      display: none;
+    }
+  }
+}
 .index-section-02{
   @extend %index-section;
   position: relative;
